Add "Recycle bin" to menu configuration [IT221]

--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -413,6 +413,7 @@
     "LBL_REPLY": "Reply",
     "LBL_THREAD": "Thread",
     "LBL_RESTORED": "restored",
+    "LBL_RECYCLE_BIN": "Recycle bin",
     "LBL_RESULT_FOR_THE_TAG": "Results for the tag",
     "LBL_Sat": "Sat",
     "LBL_SAVE": "Save",
