--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1309,7 +1309,8 @@
     "LBL_YETIFORCE_REGISTRATION": "CRM system registration",
     "LBL_YETIFORCE_NEWSLETTER": "Newsletter",
     "LBL_YETIFORCE_NEWSLETTER_FILL_DATA": "uzupełnij dane",
-    "LBL_YETIFORCE_NEWSLETTER_ERROR": "Nie wprowadzono adresu e-mail do danych firmy. Jeśli chcesz otrzymywać newsletter %s."
+    "LBL_YETIFORCE_NEWSLETTER_ERROR": "Nie wprowadzono adresu e-mail do danych firmy. Jeśli chcesz otrzymywać newsletter %s.",
+    "RecycleBin": "Trash bin"
   },
   "js": {
     "JS_APPROVE": "Approve",
