Added translations for DownloadLanguage

--- a/languages/en-US/Settings/YetiForce.json
+++ b/languages/en-US/Settings/YetiForce.json
@@ -41,6 +41,8 @@
     "LBL_ACTIVATE": "Activate",
     "LBL_DOWNLOAD_LANG": "Download language",
     "LBL_DOWNLOAD": "Download",
-    "LBL_UPDATE": "Update"
+    "LBL_UPDATE": "Update",
+    "LBL_DOWNLOADED_LANGUAGE": "Downloaded language",
+    "LBL_NO_INTERNET_CONNECTION": "There is no Internet connection"
   }
 }
