Added hierarchy into Contacts

--- a/languages/en-US/Contacts.json
+++ b/languages/en-US/Contacts.json
@@ -14,7 +14,7 @@
     "Office Phone": "Office phone",
     "Portal User": "Portal user",
     "Reference": "Reference",
-    "Reports To": "Reports to",
+    "Reports To": "Parent Contact",
     "Secondary Email": "Secondary email",
     "SINGLE_Contacts": "Contact",
     "Support End Date": "Support end date",
