--- a/languages/en-US/Settings/YetiForce.json
+++ b/languages/en-US/Settings/YetiForce.json
@@ -38,11 +38,6 @@
     "LBL_SUPPLIERS": "Suppliers",
     "LBL_INVALID_OFFLINE_KEY": "Entered incorrect key",
     "LBL_ONLINE_REGISTRATION_FAILED": "Error during registration.",
-    "LBL_ACTIVATE": "Activate",
-    "LBL_DOWNLOAD_LANG": "Download language",
-    "LBL_DOWNLOAD": "Download",
-    "LBL_UPDATE": "Update",
-    "LBL_DOWNLOADED_LANGUAGE": "Downloaded language",
-    "LBL_NO_INTERNET_CONNECTION": "There is no Internet connection"
+    "LBL_ACTIVATE": "Activate"
   }
 }
