--- a/languages/en-US/Other/Country.json
+++ b/languages/en-US/Other/Country.json
@@ -1,172 +1,240 @@
 {
   "php": {
-    "Afghanistan": "Afganistan",
-    "Algeria": "Algieria",
-    "American Samoa": "Samoa Amerykańskie",
-    "Andorra": "Andora",
-    "Antarctica": "Antarktyka",
+    "Afghanistan": "Afghanistan",
+    "Albania": "Albania",
+    "Algeria": "Algeria",
+    "American Samoa": "American Samoa",
+    "Andorra": "Andorra",
+    "Angola": "Angola",
+    "Anguilla": "Anguilla",
+    "Antarctica": "Antarctica",
     "Antigua And Barbuda": "Antigua & Barbuda",
-    "Argentina": "Argentyna",
-    "Azerbaijan": "Azerbejdżan",
-    "Bahamas": "Bahamy",
-    "Bahrain": "Bahrajn",
-    "Bangladesh": "Bangladesz",
-    "Belarus": "Białoruś",
-    "Belgium": "Belgia",
-    "Bermuda": "Bermudy",
-    "Bolivia": "Boliwia",
+    "Argentina": "Argentina",
+    "Armenia": "Armenia",
+    "Aruba": "Aruba",
+    "Australia": "Australia",
+    "Austria": "Austria",
+    "Azerbaijan": "Azerbaijan",
+    "Bahamas": "Bahamas",
+    "Bahrain": "Bahrain",
+    "Bangladesh": "Bangladesh",
+    "Barbados": "Barbados",
+    "Belarus": "Belarus",
+    "Belgium": "Belgium",
+    "Belize": "Belize",
+    "Benin": "Benin",
+    "Bermuda": "Bermuda",
+    "Bhutan": "Bhutan",
+    "Bolivia": "Bolivia",
     "Bosnia And Herzegovina": "Bosnia & Herzegovina",
-    "Brazil": "Brazylia",
-    "British Indian Ocean Territory": "Brytyjskie Terytorium Oceanu Indyjskiego",
-    "Bulgaria": "Bułgaria",
-    "Cambodia": "Kambodża",
-    "Cameroon": "Kamerun",
-    "Canada": "Kanada",
-    "Cape Verde": "Republika Zielonego Przylądka",
-    "Cayman Islands": "Kajmany",
-    "Central African Republic": "Republika Środkowoafrykańska",
-    "Chad": "Czad",
-    "China": "Chiny",
-    "Christmas Island": "Wyspa Bożego Narodzenia",
+    "Botswana": "Botswana",
+    "Brazil": "Brazil",
+    "British Indian Ocean Territory": "British Indian Ocean Territory",
+    "Virgin Islands, British": "British Virgin Islands",
+    "Brunei Darussalam": "Brunei",
+    "Bulgaria": "Bulgaria",
+    "Burkina Faso": "Burkina Faso",
+    "Burundi": "Burundi",
+    "Cambodia": "Cambodia",
+    "Cameroon": "Cameroon",
+    "Canada": "Canada",
+    "Cape Verde": "Cape Verde",
+    "Cayman Islands": "Cayman Islands",
+    "Central African Republic": "Central African Republic",
+    "Chad": "Chad",
+    "Chile": "Chile",
+    "China": "China",
+    "Christmas Island": "Christmas Island",
     "Cocos (keeling) Islands": "Cocos (Keeling) Islands",
-    "Colombia": "Kolumbia",
-    "Comoros": "Komory",
+    "Colombia": "Colombia",
+    "Comoros": "Comoros",
     "Congo": "Congo - Brazzaville",
     "Congo, The Democratic Republic Of The": "Congo - Kinshasa",
-    "Cook Islands": "Wyspy Cooka",
-    "Costa Rica": "Kostaryka",
-    "Cote D'ivoire": "Côte d’Ivoire",
-    "Croatia": "Chorwacja",
-    "Cuba": "Kuba",
-    "Cyprus": "Cypr",
-    "Czech Republic": "Czechy",
-    "Denmark": "Dania",
-    "Djibouti": "Dżibuti",
-    "Dominica": "Dominika",
-    "Dominican Republic": "Dominikana",
-    "Ecuador": "Ekwador",
-    "Egypt": "Egipt",
-    "El Salvador": "Salwador",
-    "Equatorial Guinea": "Gwinea Równikowa",
-    "Eritrea": "Erytrea",
-    "Ethiopia": "Etiopia",
+    "Cook Islands": "Cook Islands",
+    "Costa Rica": "Costa Rica",
+    "Cote D'ivoire": "C\u00f4te d\u2019Ivoire",
+    "Croatia": "Croatia",
+    "Cuba": "Cuba",
+    "Cyprus": "Cyprus",
+    "Czech Republic": "Czech Republic",
+    "Denmark": "Denmark",
+    "Djibouti": "Djibouti",
+    "Dominica": "Dominica",
+    "Dominican Republic": "Dominican Republic",
+    "Ecuador": "Ecuador",
+    "Egypt": "Egypt",
+    "El Salvador": "El Salvador",
+    "Equatorial Guinea": "Equatorial Guinea",
+    "Eritrea": "Eritrea",
+    "Estonia": "Estonia",
+    "Ethiopia": "Ethiopia",
     "Falkland Islands (malvinas)": "Falkland Islands",
-    "Faroe Islands": "Wyspy Owcze",
-    "Fiji": "Fidżi",
-    "Finland": "Finlandia",
-    "France": "Francja",
-    "French Guiana": "Gujana Francuska",
-    "French Polynesia": "Polinezja Francuska",
-    "French Southern Territories": "Francuskie Terytoria Południowe",
-    "Georgia": "Gruzja",
-    "Germany": "Niemcy",
-    "Greece": "Grecja",
-    "Greenland": "Grenlandia",
-    "Guadeloupe": "Gwadelupa",
-    "Guatemala": "Gwatemala",
-    "Guinea": "Gwinea",
+    "Faroe Islands": "Faroe Islands",
+    "Fiji": "Fiji",
+    "Finland": "Finland",
+    "France": "France",
+    "French Guiana": "French Guiana",
+    "French Polynesia": "French Polynesia",
+    "French Southern Territories": "French Southern Territories",
+    "Gabon": "Gabon",
+    "Gambia": "Gambia",
+    "Georgia": "Georgia",
+    "Germany": "Germany",
+    "Ghana": "Ghana",
+    "Gibraltar": "Gibraltar",
+    "Greece": "Greece",
+    "Greenland": "Greenland",
+    "Grenada": "Grenada",
+    "Guadeloupe": "Guadeloupe",
+    "Guam": "Guam",
+    "Guatemala": "Guatemala",
+    "Guinea": "Guinea",
     "Guinea-bissau": "Guinea-Bissau",
-    "Guyana": "Gujana",
-    "Holy See (vatican City State)": "Vatican City",
+    "Guyana": "Guyana",
+    "Haiti": "Haiti",
+    "Honduras": "Honduras",
     "Hong Kong": "Hong Kong SAR China",
-    "Hungary": "Węgry",
-    "Iceland": "Islandia",
-    "India": "Indie",
-    "Indonesia": "Indonezja",
+    "Hungary": "Hungary",
+    "Iceland": "Iceland",
+    "India": "India",
+    "Indonesia": "Indonesia",
     "Iran, Islamic Republic Of": "Iran",
-    "Iraq": "Irak",
-    "Ireland": "Irlandia",
-    "Israel": "Izrael",
-    "Italy": "Włochy",
-    "Jamaica": "Jamajka",
-    "Japan": "Japonia",
-    "Jordan": "Jordania",
+    "Iraq": "Iraq",
+    "Ireland": "Ireland",
+    "Israel": "Israel",
+    "Italy": "Italy",
+    "Jamaica": "Jamaica",
+    "Japan": "Japan",
+    "Jordan": "Jordan",
     "Kazakstan": "Kazakhstan",
-    "Kenya": "Kenia",
-    "Korea, Democratic People's Republic Of": "North Korea",
-    "Korea, Republic Of": "South Korea",
-    "Kuwait": "Kuwejt",
-    "Kyrgyzstan": "Kirgistan",
+    "Kenya": "Kenya",
+    "Kiribati": "Kiribati",
+    "Kuwait": "Kuwait",
+    "Kyrgyzstan": "Kyrgyzstan",
     "Lao People's Democratic Republic": "Laos",
-    "Latvia": "Łotwa",
-    "Lebanon": "Liban",
+    "Latvia": "Latvia",
+    "Lebanon": "Lebanon",
+    "Lesotho": "Lesotho",
+    "Liberia": "Liberia",
     "Libyan Arab Jamahiriya": "Libya",
-    "Lithuania": "Litwa",
-    "Luxembourg": "Luksemburg",
+    "Liechtenstein": "Liechtenstein",
+    "Lithuania": "Lithuania",
+    "Luxembourg": "Luxembourg",
     "Macau": "Macau SAR China",
     "Macedonia, The Former Yugoslav Republic Of": "Macedonia",
-    "Madagascar": "Madagaskar",
-    "Malaysia": "Malezja",
-    "Maldives": "Malediwy",
-    "Marshall Islands": "Wyspy Marshalla",
-    "Martinique": "Martynika",
-    "Mauritania": "Mauretania",
-    "Mayotte": "Majotta",
-    "Mexico": "Meksyk",
+    "Madagascar": "Madagascar",
+    "Malawi": "Malawi",
+    "Malaysia": "Malaysia",
+    "Maldives": "Maldives",
+    "Mali": "Mali",
+    "Malta": "Malta",
+    "Marshall Islands": "Marshall Islands",
+    "Martinique": "Martinique",
+    "Mauritania": "Mauritania",
+    "Mauritius": "Mauritius",
+    "Mayotte": "Mayotte",
+    "Mexico": "Mexico",
     "Micronesia, Federated States Of": "Micronesia",
     "Moldova, Republic Of": "Moldova",
-    "Monaco": "Monako",
-    "Montenegro": "Czarnogóra",
-    "Morocco": "Maroko",
-    "Mozambique": "Mozambik",
+    "Monaco": "Monaco",
+    "Mongolia": "Mongolia",
+    "Montenegro": "Montenegro",
+    "Montserrat": "Montserrat",
+    "Morocco": "Morocco",
+    "Mozambique": "Mozambique",
     "Myanmar": "Myanmar (Burma)",
-    "Netherlands": "Holandia",
-    "New Caledonia": "Nowa Kaledonia",
-    "New Zealand": "Nowa Zelandia",
-    "Nicaragua": "Nikaragua",
-    "Norfolk Island": "Norfolk",
-    "Northern Mariana Islands": "Mariany Północne",
-    "Norway": "Norwegia",
+    "Namibia": "Namibia",
+    "Nauru": "Nauru",
+    "Nepal": "Nepal",
+    "Netherlands": "Netherlands",
+    "New Caledonia": "New Caledonia",
+    "New Zealand": "New Zealand",
+    "Nicaragua": "Nicaragua",
+    "Niger": "Niger",
+    "Nigeria": "Nigeria",
+    "Niue": "Niue",
+    "Norfolk Island": "Norfolk Island",
+    "Korea, Democratic People's Republic Of": "North Korea",
+    "Northern Mariana Islands": "Northern Mariana Islands",
+    "Norway": "Norway",
+    "Oman": "Oman",
+    "Pakistan": "Pakistan",
+    "Palau": "Palau",
     "Palestinian Territory, Occupied": "Palestinian Territories",
-    "Papua New Guinea": "Papua-Nowa Gwinea",
-    "Paraguay": "Paragwaj",
-    "Philippines": "Filipiny",
-    "Poland": "Polska",
-    "Portugal": "Portugalia",
-    "Puerto Rico": "Portoryko",
-    "Qatar": "Katar",
-    "Romania": "Rumunia",
+    "Panama": "Panama",
+    "Papua New Guinea": "Papua New Guinea",
+    "Paraguay": "Paraguay",
+    "Peru": "Peru",
+    "Philippines": "Philippines",
+    "Pitcairn": "Pitcairn Islands",
+    "Poland": "Poland",
+    "Portugal": "Portugal",
+    "Puerto Rico": "Puerto Rico",
+    "Qatar": "Qatar",
+    "Reunion": "R\u00e9union",
+    "Romania": "Romania",
     "Russian Federation": "Russia",
+    "Rwanda": "Rwanda",
+    "Samoa": "Samoa",
+    "San Marino": "San Marino",
+    "Sao Tome And Principe": "S\u00e3o Tom\u00e9 & Pr\u00edncipe",
+    "Saudi Arabia": "Saudi Arabia",
+    "Senegal": "Senegal",
+    "Serbia": "Serbia",
+    "Seychelles": "Seychelles",
+    "Sierra Leone": "Sierra Leone",
+    "Singapore": "Singapore",
+    "Slovakia": "Slovakia",
+    "Slovenia": "Slovenia",
+    "Solomon Islands": "Solomon Islands",
+    "Somalia": "Somalia",
+    "South Africa": "South Africa",
+    "South Georgia And The South Sandwich Islands": "South Georgia & South Sandwich Islands",
+    "Korea, Republic Of": "South Korea",
+    "Spain": "Spain",
+    "Sri Lanka": "Sri Lanka",
     "Saint Helena": "St. Helena",
     "Saint Kitts And Nevis": "St. Kitts & Nevis",
+    "Saint Lucia": "St. Lucia",
     "Saint Pierre And Miquelon": "St. Pierre & Miquelon",
     "Saint Vincent And The Grenadines": "St. Vincent & Grenadines",
-    "Sao Tome And Principe": "São Tomé & Príncipe",
-    "Saudi Arabia": "Arabia Saudyjska",
-    "Seychelles": "Seszele",
-    "Singapore": "Singapur",
-    "Slovakia": "Słowacja",
-    "Slovenia": "Słowenia",
-    "Solomon Islands": "Wyspy Salomona",
-    "South Africa": "Republika Południowej Afryki",
-    "South Georgia And The South Sandwich Islands": "South Georgia & South Sandwich Islands",
-    "Spain": "Hiszpania",
-    "Suriname": "Surinam",
+    "Sudan": "Sudan",
+    "Suriname": "Suriname",
     "Svalbard And Jan Mayen": "Svalbard & Jan Mayen",
-    "Swaziland": "Suazi",
-    "Sweden": "Szwecja",
-    "Switzerland": "Szwajcaria",
+    "Swaziland": "Swaziland",
+    "Sweden": "Sweden",
+    "Switzerland": "Switzerland",
     "Syrian Arab Republic": "Syria",
     "Taiwan, Province Of China": "Taiwan",
-    "Tajikistan": "Tadżykistan",
+    "Tajikistan": "Tajikistan",
     "Tanzania, United Republic Of": "Tanzania",
-    "Thailand": "Tajlandia",
+    "Thailand": "Thailand",
+    "Togo": "Togo",
+    "Tokelau": "Tokelau",
+    "Tonga": "Tonga",
     "Trinidad And Tobago": "Trinidad & Tobago",
-    "Tunisia": "Tunezja",
-    "Turkey": "Turcja",
+    "Tunisia": "Tunisia",
+    "Turkey": "Turkey",
+    "Turkmenistan": "Turkmenistan",
     "Turks And Caicos Islands": "Turks & Caicos Islands",
-    "Ukraine": "Ukraina",
-    "United Arab Emirates": "Zjednoczone Emiraty Arabskie",
-    "United Kingdom": "Wielka Brytania",
-    "United States": "Stany Zjednoczone",
+    "Tuvalu": "Tuvalu",
     "United States Minor Outlying Islands": "U.S. Outlying Islands",
-    "Uruguay": "Urugwaj",
-    "Venezuela": "Wenezuela",
-    "Viet Nam": "Vietnam",
-    "Virgin Islands, British": "British Virgin Islands",
     "Virgin Islands, U.s.": "U.S. Virgin Islands",
+    "Uganda": "Uganda",
+    "Ukraine": "Ukraine",
+    "United Arab Emirates": "United Arab Emirates",
+    "United Kingdom": "United Kingdom",
+    "United States": "United States",
+    "Uruguay": "Uruguay",
+    "Uzbekistan": "Uzbekistan",
+    "Vanuatu": "Vanuatu",
+    "Holy See (vatican City State)": "Vatican City",
+    "Venezuela": "Venezuela",
+    "Viet Nam": "Vietnam",
     "Wallis And Futuna": "Wallis & Futuna",
-    "Western Sahara": "Sahara Zachodnia",
-    "Yemen": "Jemen"
+    "Western Sahara": "Western Sahara",
+    "Yemen": "Yemen",
+    "Zambia": "Zambia",
+    "Zimbabwe": "Zimbabwe"
   }
 }
