Addition of a translation

--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1113,6 +1113,7 @@
     "LBL_XML_EXPORT_TPL": "Template",
     "LBL_CSV": "CSV",
     "LBL_XML": "XML",
+    "LBL_ICAL": "iCalendar",
     "LBL_HEADLINE": "Headline",
     "LBL_BASIC_VERSE": "Basic line",
     "LBL_ADDITIONAL_VERSE": "Additional line",
