[IT283] Getting translations from the default language

--- a/install/languages/en-US/Install.json
+++ b/install/languages/en-US/Install.json
@@ -30,7 +30,10 @@
     "LBL_INSTALL_BUTTON": "Install",
     "LBL_INSTALL_PREREQUISITES": "Verify server configuration",
     "LBL_MORE_INFORMATION": "More information",
+    "LBL_LIBRARY": "Support for libraries",
     "LBL_LIBRARY_NAME": "Library name",
+    "LBL_MANDATORY": "Mandatory",
+    "LBL_INSTALLED": "Installed",
     "LBL_NEXT": "Next",
     "LBL_ONE_LAST_THING": "One last thing...",
     "LBL_PASSWORD_MISMATCH": "Please re-enter passwords.  The \\\"Password\\\" and \\\"Re-type password\\\" values do not match.",
