--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1309,7 +1309,9 @@
     "LBL_YETIFORCE_REGISTRATION": "CRM system registration",
     "LBL_YETIFORCE_NEWSLETTER": "Newsletter",
     "LBL_YETIFORCE_NEWSLETTER_FILL_DATA": "Fill in the required information",
-    "LBL_YETIFORCE_NEWSLETTER_ERROR": "No e-mail address was added to company details. If you want to receive newsletter %s."
+    "LBL_YETIFORCE_NEWSLETTER_ERROR": "No e-mail address was added to company details. If you want to receive newsletter %s.",
+    "LBL_START": "Start",
+    "LBL_END": "End"
   },
   "js": {
     "JS_APPROVE": "Approve",
