[IT146] Fixed missing translations

--- a/languages/en-US/Settings/ConfReport.json
+++ b/languages/en-US/Settings/ConfReport.json
@@ -175,6 +175,7 @@
     "LBL_HELP_ALLEXT": "",
     "LBL_HELP_XDEBUG": "Extension that helps detect bugs.",
     "LBL_HELP_OPCACHE_ENABLE": "Enables cache.",
+    "LBL_HELP_OPCACHE_FILE_UPDATE_PROTECTION": "Prevents caching files that are less than this number of seconds old.",
     "LBL_HELP_OPCACHE_ENABLE_CLI": "Enables the opcode cache for the CLI version of PHP.",
     "LBL_HELP_OPCACHE_MAX_ACCELERATED_FILES": "Maximum number of keys in the OPcache hash table.",
     "LBL_HELP_OPCACHE_INTERNED_STRINGS_BUFFER": "Amount of memory used to store interned strings, in megabytes.",
@@ -182,6 +183,8 @@
     "LBL_HELP_OPCACHE_REVALIDATE_FREQ": "Frequency of checking updates for each request.",
     "LBL_HELP_OPCACHE_SAVE_COMMENTS": "If disabled, all documentation comments will be discarded from the opcode cache to reduce the size of the optimised code.",
     "LBL_HELP_OPCACHE_MEMORY_CONSUMPTION": "OPcache shared memory storage size in megabytes",
+    "LBL_HELP_REALPATH_CACHE_TTL": "Duration of time (in seconds) for which to cache realpath information for a given file or directory.",
+    "LBL_HELP_APC_ENABLED": "This can be set to 0 to disable APC.",
     "LBL_HELP_COOKIE_SECURE": "",
     "LBL_HELP_MAX_CONNECTIONS": "Maximum number of simultaneous client connections.",
     "LBL_HELP_DRIVER": "Database engine",
