--- a/languages/en-US/Settings/YetiForce.json
+++ b/languages/en-US/Settings/YetiForce.json
@@ -38,6 +38,7 @@
     "LBL_END_USERS": "End users",
     "LBL_INTEGRATORS": "Integrators",
     "LBL_SUPPLIERS": "Suppliers",
+    "LBL_PROVIDERS": "Providers",
     "LBL_INVALID_OFFLINE_KEY": "Entered incorrect key",
     "LBL_ONLINE_REGISTRATION_FAILED": "Error during registration.",
     "LBL_ACTIVATE": "Activate",
