Added updating all fields in detail header after quick ajax in accounts module

--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -793,7 +793,7 @@
     "COPY_ADRESS_FROM": "Copy address from:",
     "LBL_WIDGETS_MANAGMENT": "Widgets",
     "Attention": "Comments",
-    "Share with users": "Share with users:",
+    "Share with users": "Share with users",
     "LBL_TOTAL_TIME": "Total time",
     "LBL_EMPLOYEE": "Employee",
     "LBL_PURCHASE": "Purchase",
