--- a/languages/en-US/Other/Exceptions.json
+++ b/languages/en-US/Other/Exceptions.json
@@ -1,7 +1,7 @@
 {
   "php": {
     "ERR_ILLEGAL_VALUE": "Illegal value",
-    "ERR_ILLEGAL_FIELD_VALUE": "Illegal value in field %s (%s)",
+    "ERR_ILLEGAL_FIELD_VALUE": "Illegal value has been entered for this field type. Field name: %s, Module: %s, Value: %s",
     "ERR_VALUE_IS_TOO_LONG": "Value in %s field is too long (%s)",
     "ERR_TO_MANY_FILES": "Too many files - limit was exceeded",
     "ERR_VALUE_CAN_NOT_BE_LESS_THAN_ZERO": "Field value %s must be greater than zero (%s)",
