--- a/languages/en-US/Other/Exceptions.json
+++ b/languages/en-US/Other/Exceptions.json
@@ -2,9 +2,9 @@
   "php": {
     "ERR_ILLEGAL_VALUE": "Illegal value",
     "ERR_ILLEGAL_FIELD_VALUE": "Illegal value has been entered for this field type. Field name: %s, Module: %s, Value: %s",
-    "ERR_VALUE_IS_TOO_LONG": "Value in %s field is too long (%s)",
-    "ERR_TO_MANY_FILES": "Too many files - limit was exceeded",
-    "ERR_VALUE_CAN_NOT_BE_LESS_THAN_ZERO": "Field value %s must be greater than zero (%s)",
+    "ERR_VALUE_IS_TOO_LONG": "Value in field is too long. Field name: %s, Module: %s, Value: %s",
+    "ERR_TO_MANY_FILES": "Too many files - limit was exceeded. Field name: %s, Module: %s, Value: %s",
+    "ERR_VALUE_CAN_NOT_BE_LESS_THAN_ZERO": "Field value must be greater than zero. Field name: %s, Module: %s, Value: %s",
     "ERR_NOT_ALLOWED_VALUE": "Incorrect value detected, please contact your administrator",
     "ERR_PASSWORD_HAS_ALREADY_BEEN_USED": "This password has already been used. The system does not allow to use the same password for security reasons.",
     "ERR_USER_EXISTS": "User with the same username and role already exists (%s)",
