Improved view of widget and getting display values

--- a/languages/en-US/ProjectTask.json
+++ b/languages/en-US/ProjectTask.json
@@ -28,6 +28,7 @@
     "Cancelled": "Cancelled",
     "administrative": "Internal",
     "operative": "External",
-    "other": "Shared"
+    "other": "Shared",
+    "LBL_PROJECT": "Project"
   }
 }
