--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1319,7 +1319,9 @@
     "LBL_END": "End",
     "LBL_AUTOMATIC": "Automatic",
     "LBL_UPCOMING_PROJECT_TASKS": "Upcoming project tasks",
-    "LBL_NO_UPCOMING_PROJECT_TASKS": "No upcoming project tasks"
+    "LBL_NO_UPCOMING_PROJECT_TASKS": "No upcoming project tasks",
+    "LBL_COMPLETED_PROJECT_TASKS": "Completed project tasks",
+    "LBL_NO_COMPLETED_PROJECT_TASKS": "No completed project tasks"
   },
   "js": {
     "JS_APPROVE": "Approve",
