Added field type for registration online and added the info alert to Companies

--- a/languages/en-US/Settings/Companies.json
+++ b/languages/en-US/Settings/Companies.json
@@ -4,15 +4,16 @@
     "Companies": "Company details",
     "LBL_COMPANIES_DESCRIPTION": "Manage company details",
     "LBL_ID": "Id",
-    "LBL_NAME": "Full company name",
+    "LBL_NAME": "The name of your company",
     "LBL_EMAIL": "E-mail",
     "LBL_CITY": "City",
     "LBL_COUNTRY": "Country",
+    "LBL_CONDITIONS_OF_REGISTRATION": "All data below must be true, it is an obligatory condition of registering the product that results from the license terms.  %s In the registration, there should be all companies involved in the implementation of the CRM system, e.g. \"Target user\" should always be filled in with the data of a company that uses this system. The \"Supplier\" entry type must exist when a company implementing CRM is different from the one that uses it. The \"Integrator\" entry type must exist when integration with a CRM system was performed and the data of the company that integrated the system needs to be submitted.",
     "LBL_TYPE": "Type",
     "LBL_TYPE_TARGET_USER": "End user",
     "LBL_TYPE_INTEGRATOR": "Integrator",
     "LBL_TYPE_PROVIDER": "Provider",
-    "LBL_COMPANYSIZE": "Company size",
+    "LBL_COMPANYSIZE": "The number of employees of the company",
     "LBL_WEBSITE": "Website",
     "LBL_INDUSTRY": "Industry",
     "LBL_FIRSTNAME": "First name",
