--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1321,7 +1321,7 @@
     "LBL_UPCOMING_PROJECT_TASKS": "Upcoming project tasks",
     "LBL_NO_UPCOMING_PROJECT_TASKS": "No upcoming project tasks",
     "LBL_COMPLETED_PROJECT_TASKS": "Completed project tasks",
-    "LBL_NO_COMPLETED_PROJECT_TASKS": "No completed project tasks"
+    "LBL_NO_COMPLETED_PROJECT_TASKS": "No completed project tasks",
     "LBL_SELECT_UP_TO_RECORDS": "Select up to %s records"
   },
   "js": {
