--- a/languages/en-US/Settings/Companies.json
+++ b/languages/en-US/Settings/Companies.json
@@ -21,6 +21,7 @@
     "LBL_LOGO": "Logo",
     "LBL_EMAIL_NEWSLETTER_INFO": "Sign up for YetiForce’s free newsletter. Keep up with all latest features in the system, and find out more about the CRM sector. We will send you information about new versions, updates, events, new additions to the system, and much more.\nJoin our community and stay up to date.\nInternet connection is required to sign up.",
     "LBL_COMPANY_NAMES_EXIST": "The company name already exists",
+    "LBL_LAST_SCAN_DATE": "Date of the last scan of the status the registration",
     "LBL_REGISTER_CRM_ONLINE": "Registration - OnLine",
     "LBL_REGISTER_CRM_SERIAL": "Registration - Key",
     "LBL_NOT_REGISTERED": "Not registered",
