--- a/languages/en-US/Settings/Companies.json
+++ b/languages/en-US/Settings/Companies.json
@@ -14,7 +14,7 @@
     "LBL_TYPE_INTEGRATOR": "Integrator",
     "LBL_TYPE_PROVIDER": "Provider",
     "LBL_COMPANYSIZE": "The number of employees of the company",
-    "LBL_WEBSITE": "Website",
+    "LBL_WEBSITE": "Your company's website",
     "LBL_INDUSTRY": "Industry",
     "LBL_FIRSTNAME": "First name",
     "LBL_LASTNAME": "Last name",
