Improving the addition of invitations

--- a/languages/en-US/Calendar.json
+++ b/languages/en-US/Calendar.json
@@ -20,6 +20,8 @@
     "LBL_CHANGE_OWNER": "Change owner",
     "LBL_CONTACTS_BIRTH_DAY": "Date of birth",
     "LBL_CONTACTS_SUPPORT_END_DATE": "Support end date",
+    "LBL_PARTICIPANTS_EMAIL": "Participant's email",
+    "LBL_ADD_PARTICIPANT": "Add participant",
     "LBL_DAY0": "Sunday",
     "LBL_DAY1": "Monday",
     "LBL_DAY2": "Tuesday",
