Added new upcoming project tasks widget [IT508] (#9695)
* Added new upcoming project tasks widget [IT508]

* Added improvements

* Added improvements

* Improved templates

* Improved view of widget and getting display values

* Deleted right padding

* Added completed project task widget

* Improved getting automation status

* Improved code

* Improved code

* Revert changes in wrong file

* Improved widget js

* Added cache

* Update _Base.json

* Improved comments

* Change query to query generator

* Improved package comments

--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1318,6 +1318,10 @@
     "LBL_START": "Start",
     "LBL_END": "End",
     "LBL_AUTOMATIC": "Automatic",
+    "LBL_UPCOMING_PROJECT_TASKS": "Upcoming project tasks",
+    "LBL_NO_UPCOMING_PROJECT_TASKS": "No upcoming project tasks",
+    "LBL_COMPLETED_PROJECT_TASKS": "Completed project tasks",
+    "LBL_NO_COMPLETED_PROJECT_TASKS": "No completed project tasks",
     "PLL_PLANNED" : "Planned",
     "PLL_ON_HOLD" : "On hold",
     "PLL_SUBMITTED_COMMENTS" : "Submitted comments",
