--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1507,6 +1507,9 @@
     "JS_AUGUST": "August",
     "JS_DAY": "Day",
     "JS_DAY_SHORT": "D.",
+    "JS_DAYS": "Days",
+    "JS_PLANNED": "Planned",
+    "JS_REALISATION": "Realisation",
     "JS_DEC": "Dec",
     "JS_DECEMBER": "December",
     "JS_FEB": "Feb",
