Added minor improvement

--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -955,6 +955,7 @@
     "Mails List": "Most recent emails",
     "Support Group": "Support Group",
     "Marketing Group": "Marketing Group",
+    "Team Selling": "Team Selling",
     "LBL_ERROR_IMPORT_IN_DEMO": "Demo mode is enabled, the installation of modules is disabled.",
     "Pre Tax Total": "Total pre tax",
     "ApiAddress": "Address search",
