--- a/languages/en-US/Calendar.json
+++ b/languages/en-US/Calendar.json
@@ -21,7 +21,8 @@
     "LBL_CONTACTS_BIRTH_DAY": "Date of birth",
     "LBL_CONTACTS_SUPPORT_END_DATE": "Support end date",
     "LBL_PARTICIPANTS_EMAIL": "Participant's email",
-    "LBL_ADD_PARTICIPANT": "Add participant",
+    "LBL_PARTICIPANTS_NAME": "Name of the participant",
+    "LBL_ADD_PARTICIPANT": "Invite a participant outside of CRM",
     "LBL_DAY0": "Sunday",
     "LBL_DAY1": "Monday",
     "LBL_DAY2": "Tuesday",
@@ -163,8 +164,8 @@
     "LBL_SM_TUE": "Tue",
     "LBL_SM_WED": "Wed",
     "LBL_UNTIL": "Until",
-    "LBL_INVITE_RECORDS": "Invite users",
-    "LBL_SELECT_INVITE": "Invite others",
+    "LBL_INVITE_RECORDS": "Invite participants",
+    "LBL_SELECT_INVITE": "Invite a participant from CRM",
     "LBL_NEEDS-ACTION": "Awaiting acceptance",
     "LBL_ACCEPTED": "Accepted",
     "LBL_DECLINED": "Rejected",
