--- a/languages/en-US/Settings/YetiForce.json
+++ b/languages/en-US/Settings/YetiForce.json
@@ -38,6 +38,7 @@
     "LBL_SUPPLIERS": "Suppliers",
     "LBL_INVALID_OFFLINE_KEY": "Entered incorrect key",
     "LBL_ONLINE_REGISTRATION_FAILED": "Error during registration.",
+    "LBL_REGISTRATION_PENDING": "Pending registration",
     "LBL_ACTIVATE": "Activate",
     "LBL_DOWNLOAD_LANG": "Download language",
     "LBL_DOWNLOAD": "Download",
