--- a/install/languages/el-GR/ConfReport.json
+++ b/install/languages/el-GR/ConfReport.json
@@ -151,7 +151,7 @@
     "LBL_HELP_INNODB_LOCK_WAIT_TIMEOUT": "Ο χρόνος (σε δευτερόλεπτα) που η συναλλαγή InnoDB περιμένει για κλείδωμα γραμμής. Μετά από αυτό το διάστημα, εάν η γραμμή εξακολουθεί να είναι κλειδωμένη, προβάλλεται ένα μήνυμα σφάλματος.",
     "LBL_HELP_WAIT_TIMEOUT": "Πόσο χρονικό διάστημα (σε δευτερόλεπτα) ο διακομιστής αναμένει για δραστηριότητα κατά τη διάρκεια μιας μη αλληλεπιδραστικής σύνδεσης πριν να κλείσει.",
     "LBL_HELP_INTERACTIVE_TIMEOUT": "Πόσο χρονικό διάστημα (σε δευτερόλεπτα) ο διακομιστής αναμένει για δραστηριότητα κατά τη διάρκεια μιας αλληλεπιδραστικής σύνδεσης πριν να κλείσει.",
-    "LBL_HELP_SQL_MODE": "Different modes of working with the database. The modes affect SQL syntax and data validity verification. Must not contain STRICT_TRANS_TABLE and STRICT_ALL_TABLES. \r\nThe system is compatible with the following modes: ONLY_FULL_GROUP_BY, NO_ZERO_IN_DATE, NO_ZERO_DATE, ERROR_FOR_DIVISION_BY_ZERO, NO_AUTO_CREATE_USER, NO_ENGINE_SUBSTITUTION.",
+    "LBL_HELP_SQL_MODE": "Διαφορετικοί τρόποι εργασίας με τη βάση δεδομένων. Οι λειτουργίες επηρεάζουν τη σύνταξη SQL καθώς και την επικύρωση των δεδομένων. Δεν πρέπει να περιέχει STRICT_TRANS_TABLE και STRICT_ALL_TABLES.\nΤο σύστημα είναι συμβατό με τις παρακάτω λειτουργίες: ONLY_FULL_GROUP_BY, NO_ZERO_IN_DATE, NO_ZERO_DATE, ERROR_FOR_DIVISION_BY_ZERO, NO_AUTO_CREATE_USER, NO_ENGINE_SUBSTITUTION.",
     "LBL_HELP_MAX_ALLOWED_PACKET": "Μέγιστο μέγεθος των δεδομένων που αποστέλλονται ταυτόχρονα.",
     "LBL_HELP_INNODB_FILE_PER_TABLE": "Δεδομένα θα αποθηκεύονται στη βάση δεδομένων σε πολλά αρχεία, όπου κάθε πίνακας έχει το δικό του αρχείο, σε αντίθεση με την παλαιά προσέγγιση, όπου όλα τα δεδομένα ήταν αποθηκευμένα σε ένα αρχείο. Αυτή η επιλογή είναι ενεργοποιημένη από προεπιλογή από την έκδοση MySQL 5.6.6 και μετά.",
     "LBL_HELP_INNODB_STATS_ON_METADATA": "Ενημερώνει τα στατιστικά για InnoDB πίνακες για ορισμένα ερωτήματα, για παράδειγμα SHOW TABLE STATUS. Απενεργοποιώντας αυτήν την επιλογή βελτιώνει την απόδοση για μεγάλους InnoDB πίνακες. Συνιστάται να απενεργοποιήσετε αυτήν την επιλογή.",
@@ -185,28 +185,28 @@
     "LBL_HELP_OPCACHE_ENABLE_CLI": "Ενεργοποιεί την cache opcode για το CLI έκδοση της PHP.",
     "LBL_HELP_OPCACHE_MAX_ACCELERATED_FILES": "Maximum number of keys in the OPcache hash table.",
     "LBL_HELP_OPCACHE_INTERNED_STRINGS_BUFFER": "Amount of memory used to store interned strings, in megabytes.",
-    "LBL_HELP_OPCACHE_VALIDATE_TIMESTAMPS": "Checks for the availability of updated scripts at every update time.",
-    "LBL_HELP_OPCACHE_REVALIDATE_FREQ": "Frequency of checking updates for each request.",
-    "LBL_HELP_OPCACHE_SAVE_COMMENTS": "If disabled, all documentation comments will be discarded from the opcode cache to reduce the size of the optimised code.",
-    "LBL_HELP_OPCACHE_MEMORY_CONSUMPTION": "OPcache shared memory storage size in megabytes",
-    "LBL_HELP_REALPATH_CACHE_TTL": "Duration of time (in seconds) for which to cache realpath information for a given file or directory.",
-    "LBL_HELP_APC_ENABLED": "The Alternative PHP Cache (APC) is a PHP extension that provides opcode caching. By caching the compiled operation codes (opcodes) of PHP scripts, APC enables sites to serve page content significantly faster.",
+    "LBL_HELP_OPCACHE_VALIDATE_TIMESTAMPS": "Ελέγχει τη διαθεσιμότητα ενημερώσεων των σεναρίων(scripts) σε κάθε ώρα ενημέρωσης.",
+    "LBL_HELP_OPCACHE_REVALIDATE_FREQ": "Συχνότητα ελέγχου ενημερώσεων για κάθε αίτημα.",
+    "LBL_HELP_OPCACHE_SAVE_COMMENTS": "Εάν απενεργοποιηθεί, όλες οι παρατηρήσεις τεκμηρίωσης θα αφαιρεθούν από τη μνήμη cache του opcode ώστε να μειωθεί το μέγεθος του βελτιστοποιημένου κώδικα.",
+    "LBL_HELP_OPCACHE_MEMORY_CONSUMPTION": "Μέγεθος σε megabyte της OPcache κοινόχρηστης μνήμης αποθήκευσης",
+    "LBL_HELP_REALPATH_CACHE_TTL": "Το χρονικό διάστημα (σε δευτερόλεπτα) μέσω του οποίου πληροφορίες πραγματικής διαδρομής για ένα δεδομένο αρχείο ή κατάλογο αποθηκεύονται στη μνήμη cache.",
+    "LBL_HELP_APC_ENABLED": "Η Alternative PHP Cache (APC) είναι μια επέκταση PHP που παρέχει προσωρινή αποθήκευση σε opcode. Με την προσωρινή αποθήκευση του μεταγλωττισμένου κώδικα (opcodes) των PHP scripts, το APC επιτρέπει σε ιστότοπους να διαθέτουν τα περιεχόμενα της σελίδας πολύ πιο γρήγορα.",
     "LBL_HELP_COOKIE_SECURE": "",
-    "LBL_HELP_MAX_CONNECTIONS": "Maximum number of simultaneous client connections.",
-    "LBL_HELP_DRIVER": "Database engine",
-    "LBL_HELP_SERVERVERSION": "Database server version",
-    "LBL_HELP_CLIENTVERSION": "Version of client libraries used by PDO driver.",
+    "LBL_HELP_MAX_CONNECTIONS": "Μέγιστος αριθμός ταυτόχρονων συνδέσεων πελάτη.",
+    "LBL_HELP_DRIVER": "Μηχανή Βάσης Δεδομένων",
+    "LBL_HELP_SERVERVERSION": "Έκδοση διακομιστή βάσης δεδομένων",
+    "LBL_HELP_CLIENTVERSION": "Πληροφορίες σχετικά με την έκδοση των βιβλιοθηκών πελάτη που χρησιμοποιούνται από το πρόγραμμα οδήγησης PDO.",
     "LBL_HELP_CONNECTIONSTATUS": "Κατάσταση σύνδεσης",
-    "LBL_HELP_SERVERINFO": "Information about database server to which PDO is connected.",
-    "LBL_HELP_BULK_INSERT_BUFFER_SIZE": "Size in bytes of cache tree for each thread used to speed up the insertion of batch data into MyISAM and Aria tables. Value 0 disables the cache tree.",
-    "LBL_HELP_KEY_BUFFER_SIZE": "Buffer size for index blocks used by MyISAM arrays and shared for all threads.",
-    "LBL_HELP_THREAD_CACHE_SIZE": "Size of server cache threads to be reused.",
-    "LBL_HELP_QUERY_CACHE_SIZE": "Size in bytes available for the query buffer. About 40 KB are required for query cache structures, so setting a smaller size will result in a warning.",
-    "LBL_HELP_TMP_TABLE_SIZE": "Maximum size for temporary tables in memory.",
-    "LBL_HELP_MAX_HEAP_TABLE_SIZE": "Maximum size in bytes for MEMORY tables created by user. Setting the variable when the server is active does not affect existing tables, unless they are recreated or changed.",
-    "LBL_HELP_INNODB_BUFFER_POOL_INSTANCES": "If value in innodb_buffer_pool_size is greater than 1GB, it divides InnoDB buffer pool into multiple instances.",
-    "LBL_HELP_INNODB_BUFFER_POOL_SIZE": "Size of InnoDB buffer pool in bytes.",
-    "LBL_HELP_INNODB_LOG_FILE_SIZE": "Log file size in bytes",
+    "LBL_HELP_SERVERINFO": "Πληροφορίες σχετικά με τον διακομιστή βάσης δεδομένων στον οποίο είναι συνδεδεμένο το PDO.",
+    "LBL_HELP_BULK_INSERT_BUFFER_SIZE": "Mέγεθος σε bytes της cache tree για κάθε νήμα(thread) που χρησιμοποιείται για να επιταχυνθεί η εισαγωγή των δεδομένων εισόδου για πίνακες MyISAM και Aria. Η τιμή 0 απενεργοποιεί την cache tree.",
+    "LBL_HELP_KEY_BUFFER_SIZE": "Μέγεθος buffer για τα index blocks που χρησιμοποιούνται από πίνακες MyISAM και μοιράζονται σε όλα τα νήματα(threads).",
+    "LBL_HELP_THREAD_CACHE_SIZE": "Ο αριθμός των νημάτων(threads) προσωρινής μνήμης διακομιστή για επαναχρησιμοποίηση.",
+    "LBL_HELP_QUERY_CACHE_SIZE": "Μέγεθος σε byte που είναι διαθέσιμα για το buffer ερωτήματος. Απαιτούνται περίπου 40 KB για τις δομές της προσωρινής μνήμης ερωτήματος, οπότε η ρύθμιση ενός μικρότερου μεγέθους θα έχει ως αποτέλεσμα προειδοποίηση.",
+    "LBL_HELP_TMP_TABLE_SIZE": "Μέγιστο μέγεθος για προσωρινούς πίνακες στη μνήμη.",
+    "LBL_HELP_MAX_HEAP_TABLE_SIZE": "Το μέγιστο μέγεθος σε bytes για τους πίνακες MEMORY που δημιουργούνται από το χρήστη. Η ρύθμιση της μεταβλητής όταν ο διακομιστής είναι ενεργός δεν επηρεάζει τους υπάρχοντες πίνακες, εκτός εάν επαναδημιουργούνται ή αλλάζουν.",
+    "LBL_HELP_INNODB_BUFFER_POOL_INSTANCES": "Σε τιμή μεγαλύτερη από 1GB στο innodb_buffer_pool_size, διαιρεί την InnoDB buffer pool σε πολλαπλές περιπτώσεις.",
+    "LBL_HELP_INNODB_BUFFER_POOL_SIZE": "Το μέγεθος του InnoDB buffer pool σε byte.",
+    "LBL_HELP_INNODB_LOG_FILE_SIZE": "Μέγεθος σε byte του αρχείου καταγραφής",
     "LBL_HELP_INNODB_IO_CAPACITY_MAX": "Μέγιστη χωρητικότητα μέχρι την οποία το InnodDB μπορεί να επεκτείνει το innodb_io_capacity σε περίπτωση έκτακτης ανάγκης.",
     "LBL_HELP_TX_ISOLATION": "Επίπεδο απομόνωσης συναλλαγών(transaction isolation.).",
     "LBL_HELP_TRANSACTION_ISOLATION": "",
