Refactoring system structure

--- a/languages/en-US/Other/Exceptions.json
+++ b/languages/en-US/Other/Exceptions.json
@@ -39,6 +39,8 @@
     "ERR_ITERATIONS_LIMIT_EXCEEDED": "Exceeded iteration limit.",
     "ERR_CANNOT_PARSE_SERVER_RESPONSE": "Error while parsing server responses",
     "ERR_CANNOT_CONNECT_TO_REMOTE": "Error while connecting to remote server",
-    "ERR_NO_INTERNET_CONNECTION": "No Internet connection"
+    "ERR_NO_INTERNET_CONNECTION": "No Internet connection",
+    "ERR_HANDLER_NOT_FOUND": "Handler not found",
+    "ERR_LOGIN_IS_REQUIRED": "Login is required"
   }
 }
