--- a/install/languages/el-GR/ConfReport.json
+++ b/install/languages/el-GR/ConfReport.json
@@ -10,7 +10,7 @@
     "LBL_CONFREPORT_DESCRIPTION": "Σας επιτρέπει να επαληθεύσετε ότι οι κύριες ρυθμίσεις του server είναι συμβατές με τις συνιστώμενες παραμέτρους.",
     "LBL_PARAMETER": "Παράμετρος",
     "LBL_VALUE": "Τιμή",
-    "LBL_RECOMMENDED": "Συνιστώμενη ρύθμιση παραμέτρων",
+    "LBL_RECOMMENDED": "Συνιστώμενη ρύθμιση",
     "LBL_SYSTEM_STABILITY": "Ρύθμιση παραμέτρων για σταθερότητα συστήματος",
     "LBL_SYSTEM_SECURITY": "Ρύθμιση παραμέτρων για ασφάλεια συστήματος",
     "LBL_SECURITY_ADVISORIES_CHECKER": "Θέματα ευπάθειας ασφαλείας στις βιβλιοθήκες",
@@ -25,7 +25,7 @@
     "LBL_LIBRARY": "Υποστήριξη για βιβλιοθήκες",
     "LBL_INSTALLED": "Εγκατεστημένο",
     "LBL_LABEL_PHP": "Έκδοση PHP",
-    "LBL_LABEL_EXTENSIONS": "Επεκτάσεις",
+    "LBL_LABEL_EXTENSIONS": "Extensions",
     "LBL_PDO_SUPPORT": "PDO",
     "LBL_OPEN_SSL": "openssl",
     "LBL_CURL": "cURL",
@@ -54,24 +54,24 @@
     "LBL_SPACE_USED": "Χρησιμοποιημένα",
     "LBL_WWW_VALUE": "www (apache)",
     "LBL_CLI_VALUE": "cron (CLI)",
-    "LBL_LABEL_PHPINI": "Ρύθμιση παραμέτρων PHP",
-    "LBL_LABEL_PHPINIS": "Πρόσθετη ρύθμιση παραμέτρων PHP",
-    "LBL_LABEL_LOG_FILE": "Αρχεία καταγραφής",
+    "LBL_LABEL_PHPINI": "Αρχείο ρύθμισης παραμέτρων PHP (. ini)",
+    "LBL_LABEL_PHPINIS": "Πρόσθετα αρχεία ρύθμισης παραμέτρων PHP (. ini)",
+    "LBL_LABEL_LOG_FILE": "Αρχεία καταγραφής (Logs)",
     "LBL_LABEL_CRM_DIR": "Τοπικός κατάλογος CRM",
     "LBL_SOAP_LIBRARY": "SOAP",
     "LBL_LABEL_PHP_SAPI": "Server API",
     "LBL_APCU_LIBRARY": "APCu",
     "LBL_OPCACHE_LIBRARY": "OPcache",
     "LBL_CRON_PHP": "Cron - PHP Version",
-    "LBL_CRON_PHPINI": "Cron - PHP ρυθμίσεις",
+    "LBL_CRON_PHPINI": "Cron - PHP configuration",
     "LBL_CRON_LOG_FILE": "Cron - Error logs",
     "LBL_ENVIRONMENTAL_INFORMATION": "Πληροφορίες περιβάλλοντος",
-    "LBL_PERFORMANCE_VERIFICATION": "Επαλήθευση απόδοσης",
+    "LBL_PERFORMANCE_VERIFICATION": "Επιδόσεις συστήματος",
     "LBL_CRON_PHP_SAPI": "Cron - Server API",
     "LBL_LABEL_OPERATING_SYSTEM": "Λειτουργικό σύστημα",
     "LBL_LATEST_PHP_TITLE": "php.net",
-    "LBL_LATEST_PHP_VERSIONS_ARE": "Τελευταίες εκδόσεις PHP %s",
-    "BTN_CHECK_LATEST_VERSION": "Ελέγξτε την τελευταία έκδοση PHP",
+    "LBL_LATEST_PHP_VERSIONS_ARE": "Τελευταίες εκδόσεις PHP: %s",
+    "BTN_CHECK_LATEST_VERSION": "Τελευταία έκδοση PHP",
     "BTN_SERVER_SPEED_TEST": "Δοκιμή ταχύτητας Διακομιστή",
     "LBL_SERVER_SPEED_TEST": "Ταχύτητα διακομιστή",
     "LBL_READ_TEST": "Ανάγνωση",
@@ -86,7 +86,7 @@
     "LBL_LIB_NAME": "Όνομα βιβλιοθήκης",
     "LBL_VULNERABILITY_NAME": "Όνομα ευπάθειας",
     "LBL_VULNERABILITY_URL": "Διεύθυνση",
-    "LBL_DOWNLOAD_CONFIG": "Λήψη ρύθμισης παραμέτρων",
+    "LBL_DOWNLOAD_CONFIG": "Λήψη ρύθμισεων",
     "LBL_LABEL_TMP_DIR": "Προσωρινός κατάλογος",
     "LBL_LABEL_SERVER_SOFTWARE": "Αναγνωριστικό διακομιστή",
     "LBL_INVALID_TIME_ZONE": "Μη έγκυρη ζώνη ώρας:",
@@ -101,7 +101,7 @@
     "LBL_DENY_PUBLIC_DIR_TITLE": "Επαλήθευση δικαιωμάτων για καταλόγους",
     "LBL_PUBLIC_DIR": "Διαδρομή καταλόγου",
     "LBL_DENY_PUBLIC_DIR_STATUS": "Απαγορεύεται η πρόσβαση;",
-    "LBL_LABEL_LAST_CRON_START": "Χρόνος που εκτελέστηκε τελευταία φορά το Cron",
+    "LBL_LABEL_LAST_CRON_START": "Time Cron was last run",
     "LBL_LABEL_PROTOCOL_VERSION": "HTTP protocol version",
     "LBL_LABEL_HTTP_METHODS": "HTTP methods",
     "LBL_HELP_MBSTRING": "Επέκταση που χρησιμοποιείται για τη διαχείριση συμβολοσειρών. Χρησιμοποιείται για να μετατρέψετε συμβολοσειρές σε διαφορετικές κωδικοποιήσεις.",
