Add mass download for related documents

--- a/languages/en-US/Documents.json
+++ b/languages/en-US/Documents.json
@@ -5,7 +5,7 @@
     "Documents": "Documents",
     "Download Count": "Download count",
     "Download Type": "Download type",
-    "File Name": "File name\/www",
+    "File Name": "File name/www",
     "File Size": "File size",
     "File Type": "File type",
     "Folder Name": "Folder name",
@@ -20,6 +20,7 @@
     "LBL_DESCRIPTION": "Description",
     "LBL_DOCUMENTS_MOVED_SUCCESSFULLY": "Documents moved successfully",
     "LBL_DOWNLOAD_FILE": "Download file",
+    "LBL_MASS_DOWNLOAD": "Mass download",
     "LBL_EMAIL_FILE_AS_ATTACHMENT": "Email file as attachment",
     "LBL_EXTERNAL": "External",
     "LBL_FILE_AVAILABLE": "File is available for download",
