Added new widget CREATED_BY_ME_BUT_NOT_MINE_OVERDUE_ACTIVITIES

--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -935,6 +935,7 @@
     "LBL_ENTITY_STATE_TRASH": "In Recycle Bin",
     "LBL_ENTITY_STATE_ACTIVE": "Active",
     "LBL_CREATED_BY_ME_BUT_NOT_MINE_ACTIVITIES": "Matters delegated",
+    "LBL_CREATED_BY_ME_BUT_NOT_MINE_OVERDUE_ACTIVITIES": "Overdue matters delegated",
     "LBL_FILTERING": "Filtering",
     "LBL_ALL_PRIORITY": "All",
     "LBL_LOW_PRIORITY": "Low priority",
@@ -1323,13 +1324,13 @@
     "LBL_NO_UPCOMING_PROJECT_TASKS": "No upcoming project tasks",
     "LBL_COMPLETED_PROJECT_TASKS": "Completed project tasks",
     "LBL_NO_COMPLETED_PROJECT_TASKS": "No completed project tasks",
-    "PLL_PLANNED" : "Planned",
-    "PLL_ON_HOLD" : "On hold",
-    "PLL_SUBMITTED_COMMENTS" : "Submitted comments",
-    "PLL_IN_PROGRESSING" : "In progressing",
-    "PLL_IN_APPROVAL" : "In approval",
-    "PLL_COMPLETED" : "Completed",
-    "PLL_CANCELLED" : "Cancelled",
+    "PLL_PLANNED": "Planned",
+    "PLL_ON_HOLD": "On hold",
+    "PLL_SUBMITTED_COMMENTS": "Submitted comments",
+    "PLL_IN_PROGRESSING": "In progressing",
+    "PLL_IN_APPROVAL": "In approval",
+    "PLL_COMPLETED": "Completed",
+    "PLL_CANCELLED": "Cancelled",
     "LBL_SELECT_UP_TO_RECORDS": "Select up to %s records"
   },
   "js": {
